src/yini_test/cases/golden/lenient/valid/document-terminator/optional-end-marker.yini
@yini

^ Document
name = "lenient-optional-end-marker"
status = "complete"

/END
