src/yini_test/cases/golden/lenient/invalid/parser-mode/yini-strict-in-lenient-mode.yini
@yini strict

^ App
name = "yini-strict-in-lenient-mode"
mode = "lenient"
enabled = true

/END
